<resources>
    <string name="app_name">Controle Financeiro</string>
    <string name="title_login">Login</string>
    <string name="login_with">Fazer login com</string>
    <string name="text_login">Entrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Página pricipal</string>
    <string name="title_dashboard">Transações</string>
    <string name="title_account">Perfil</string>
    <string name="title_conta">Adicionar uma conta bancária</string>
    <string name="title_transacao">Adicionar transacao</string>

    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saldo_atual">Saldo Atual</string>
    <string name="suas_contas">Suas contas bancárias</string>
    <string name="nubank">Nubank</string>
    <string name="bradesco">Bradesco</string>
    <string name="next">Next</string>
    <string name="valor_conta">500</string>
    <string name="user_name">José da Silva</string>
    <string name="logout">Sair</string>
    <string name="email_user">jose.silva@gmail.com</string>
    <string name="altetar_senha">Alterar Senha</string>
    <string name="add_conta">Adicionar conta bancária</string>
    <string name="nome_conta">Tipo da Conta(Ex: Carteira, Poupança, Conta Corrente)</string>
    <string name="saldo">Saldo Inicial em R$</string>
    <string name="salvar">Salvar</string>
    <string name="banco">Nome do banco</string>
    <string name="moeda">R$</string>
    <string name="nova_transacao">Adicionar transação</string>
    <string name="tipo_despesa">Despesa</string>
    <string name="tipo">Essa transação é uma:</string>
    <string name="despesa">Despesa</string>
    <string name="receita">Receita</string>
    <string name="transferencia">Transferência</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor em R$</string>
    <string name="Data">Data em que foi realizada</string>
    <string name="escollher_conta_bancaria">Escolha uma conta bancária para esta transação</string>
    <string name="del_conta">Excluir</string>

    <string-array name="lista_contas">
        <item>Nubank</item>
        <item>Bradesco</item>
    </string-array>
</resources>
